Opção de salvamento de dados em um arquivo excel.

--- a/CEESP_software/CEESP_software.csproj
+++ b/CEESP_software/CEESP_software.csproj
@@ -32,6 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="EPPlus.Core" Version="1.5.4" />
     <PackageReference Include="NumericUpDown" Version="3.0.2" />
     <PackageReference Include="OxyPlot.Wpf" Version="2.1.2" />
     <PackageReference Include="System.IO.Ports" Version="7.0.0" />
