--- a/CEESP_software/CEESP_software.csproj
+++ b/CEESP_software/CEESP_software.csproj
@@ -49,4 +49,8 @@
     <Resource Include="icons\menos.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Instalador\" />
+  </ItemGroup>
+
 </Project>
